tests/snapshots/examples_fixtures/diagnostics__error_messages__module_not_imported.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/error_messages/module_not_imported.flx
== compile ==
failed (compile)
== diagnostics ==
error[E013]: Module Not Imported

Module `MyModule` is not imported.

  examples/diagnostics/error_messages/module_not_imported.flx:6:14
  |
6 | let result = MyModule.someFunction();
  |              ^^^^^^^^^^^^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import MyModule`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.
== stdout ==
<not executed>
